test cases added for ListToStringAdapter class